welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:15: error: not found: value A
		}else if (litMessage()==A){
                                        ^